handles sonos favorites
- sync upstream lib/noson
- new page 'Favorites'
- new actions to create and remove favorite

--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -24,6 +24,7 @@ set(
     modules/NosonApp/zonesmodel.cpp
     modules/NosonApp/renderingmodel.cpp
     modules/NosonApp/roomsmodel.cpp
+    modules/NosonApp/favoritesmodel.cpp
 )
 
 add_library(NosonAppbackend MODULE
