--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ set(QT_IMPORTS_DIR "lib/${ARCH_TRIPLET}")
 option(INSTALL_TESTS "Install the tests on make install" on)
 option(CLICK_MODE "Installs to a contained location" on)
 
+set(APP_VERSION       1.3.7)
 set(APP_NAME          Noson)
 set(APP_ID            "noson.janbar")
 set(MAIN_QML          "Main.qml")
