--- a/manifest.json.in
+++ b/manifest.json.in
@@ -10,7 +10,7 @@
             "content-hub": "Noson-content.json"
         }
     },
-    "version": "1.3.7",
+    "version": "@APP_VERSION@",
     "maintainer": "Jean-luc Barriere <jlbarriere68@gmail.com>",
     "framework": "ubuntu-sdk-15.04-qml"
 }
