--- a/noson-app.in
+++ b/noson-app.in
@@ -1,3 +1,3 @@
 #!/bin/bash
-export QT_SELECT=qt5
+export QT_SELECT=@QT_SELECT@
 exec qmlscene -I @CMAKE_INSTALL_PREFIX@/@QT_IMPORTS_DIR@ @NOSONAPP_DIR@/@MAIN_QML@
