--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,9 @@ Build-Depends: cmake,
                qtbase5-dev,
                qtdeclarative5-dev,
                qttools5-dev,
-               qttools5-dev-tools
+               qttools5-dev-tools,
+               zlib1g-dev,
+               libssl-dev
 Standards-Version: 3.9.6
 Homepage: https://github.com/janbar/noson-app
 
