sync upstream lib/noson

--- a/backend/lib/noson/noson/CMakeLists.txt
+++ b/backend/lib/noson/noson/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required (VERSION 3.0.2 FATAL_ERROR)
-cmake_policy (VERSION 3.0)
+cmake_minimum_required (VERSION 2.8.9 FATAL_ERROR)
+cmake_policy (VERSION 2.8)
 #set(CMAKE_LEGACY_CYGWIN_WIN32 0) # Remove when CMake >= 2.8.4 is required
 
 project (noson)
@@ -45,13 +45,22 @@ if (NOT WIN32 AND (CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX))
     add_definitions ("-fPIC")
   endif ()
   add_definitions ("-Wall")
-  include (CheckLibraryExists)
-  include (CheckAtomic)
-  if (HAS_BUILTIN_SYNC_ADD_AND_FETCH)
-    add_definitions ("-DHAS_BUILTIN_SYNC_ADD_AND_FETCH")
-  endif ()
-  if (HAS_BUILTIN_SYNC_SUB_AND_FETCH)
-    add_definitions ("-DHAS_BUILTIN_SYNC_SUB_AND_FETCH")
+
+  include(CheckCXXCompilerFlag)
+  CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
+  if(NOT REQUIRE_CXX_98 AND COMPILER_SUPPORTS_CXX11)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+  else()
+    message(STATUS "Using standard c++98")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++98")
+    include (CheckLibraryExists)
+    include (CheckAtomic)
+    if (HAS_BUILTIN_SYNC_ADD_AND_FETCH)
+      add_definitions ("-DHAS_BUILTIN_SYNC_ADD_AND_FETCH")
+    endif ()
+    if (HAS_BUILTIN_SYNC_SUB_AND_FETCH)
+      add_definitions ("-DHAS_BUILTIN_SYNC_SUB_AND_FETCH")
+    endif ()
   endif ()
 endif ()
 
@@ -111,25 +120,6 @@ elseif (HAVE___INLINE__)
 else ()
    # no inline on this platform
    set (CC_INLINE)
-endif ()
-
-if (REQUIRE_CXX_98)
-  set (CXX_STANDARD "199711L")
-  message(STATUS "c++98 activated")
-else ()
-  if (MSVC)
-    set (CXX_STANDARD "201103L")
-  else ()
-    include(CheckCXXCompilerFlag)
-    CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
-    if(COMPILER_SUPPORTS_CXX11)
-      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-      set (CXX_STANDARD "201103L")
-    else()
-      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++98")
-      set (CXX_STANDARD "199711L")
-    endif ()
-  endif ()
 endif ()
 
 # configure the public config file
