sync upstream lib/noson

--- a/backend/lib/noson/noson/CMakeLists.txt
+++ b/backend/lib/noson/noson/CMakeLists.txt
@@ -44,15 +44,20 @@ if (NOT WIN32)
   if (NOT CYGWIN)
     add_definitions ("-fPIC")
   endif ()
+
   add_definitions ("-Wall")
 
   include(CheckCXXCompilerFlag)
   CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
   if(NOT REQUIRE_CXX_98 AND COMPILER_SUPPORTS_CXX11)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+    message(STATUS "Using standard c++11")
   else()
-    message(STATUS "Using standard c++98")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++98")
+    CHECK_CXX_COMPILER_FLAG("-std=c++98" COMPILER_SUPPORTS_CXX98)
+    if(COMPILER_SUPPORTS_CXX98)
+      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++98")
+      message(STATUS "Using standard c++98")
+    endif()
     include (CheckLibraryExists)
     include (CheckAtomic)
     if (HAS_BUILTIN_SYNC_ADD_AND_FETCH)
