music services required zlib & libssl

--- a/backend/lib/noson/noson/CMakeLists.txt
+++ b/backend/lib/noson/noson/CMakeLists.txt
@@ -96,7 +96,7 @@ else ()
     set (HAVE_GMTIME_R 0)
 endif ()
 
-find_package (ZLIB)
+find_package (ZLIB REQUIRED)
 if (ZLIB_FOUND)
     include_directories (${ZLIB_INCLUDE_DIRS})
     set (HAVE_ZLIB 1)
@@ -104,7 +104,7 @@ else ()
     set (HAVE_ZLIB 0)
 endif ()
 
-find_package(OpenSSL)
+find_package(OpenSSL REQUIRED)
 if (OPENSSL_FOUND)
     include_directories (${OPENSSL_INCLUDE_DIR})
     set (HAVE_OPENSSL 1)
