--- a/noson-app.in
+++ b/noson-app.in
@@ -1,3 +1,3 @@
 #!/bin/bash
 export QT_SELECT=qt5
-exec qmlscene -I @CMAKE_INSTALL_PREFIX@/@QT_IMPORTS_DIR@ @NOSONAPP_DIR@/@MAIN_QML@
+exec qmlscene -I @CMAKE_INSTALL_PREFIX@/@QT_IMPORTS_DIR@ @NOSONAPP_DIR@/@MAIN_QML@ "$@"
