--- a/backend/lib/noson/noson/src/local_config.h.in
+++ b/backend/lib/noson/noson/src/local_config.h.in
@@ -26,4 +26,7 @@
 #undef LIBTAG
 #define LIBTAG "SONOS"
 
+#undef LIBVERSION
+#define LIBVERSION "@NOSON_LIB_VERSION@"
+
 #endif	/* LOCAL_CONFIG_H */
