rollback to original APP_ID
revert 27729a6fb86579ea9720b161181658a9f34350fd

--- a/manifest.json.in
+++ b/manifest.json.in
@@ -1,5 +1,5 @@
 {
-    "name": "@APP_ID@.janbar",
+    "name": "@APP_ID@",
     "description": "A fast and smart SONOS controller for Ubuntu platforms: phone, touch and desktop.",
     "architecture": "@CLICK_ARCH@",
     "title": "@APP_NAME@",
