--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Build-Depends: cmake,
                qtdeclarative5-dev,
                qtdeclarative5-dev-tools,
                qtquickcontrols2-5-dev,
+               libqt5svg5-dev,
                zlib1g-dev,
                libssl-dev
 Standards-Version: 3.9.6
@@ -29,6 +30,7 @@ Depends: qml-module-qt-labs-settings,
          qtdeclarative5-particles-plugin,
          qtdeclarative5-qtquick2-plugin,
          qtdeclarative5-window-plugin,
+         libqt5svg5,
          zlib1g,
          openssl,
          ${shlibs:Depends}, ${misc:Depends},
