--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 project(NosonApp C CXX)
 cmake_minimum_required(VERSION 3.1.0)
+cmake_policy(SET CMP0071 NEW)
 
 set (CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
