--- a/macosx/resources/Contents/Info.plist
+++ b/macosx/resources/Contents/Info.plist
@@ -7,7 +7,7 @@
 	<key>BuildTime</key>
 	<string></string>
 	<key>CFBundleExecutable</key>
-	<string>noson-app</string>
+	<string>noson-gui</string>
 	<key>CFBundleIconFile</key>
 	<string>noson</string>
 	<key>CFBundleIdentifier</key>
