--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -17,7 +17,8 @@ add_subdirectory(ui)
 add_custom_target(nosongui_QMlFiles ALL SOURCES ${APP_FILES})
 
 set(
-  diskcache_SRCS
+  noson-gui-sources
+  noson.cpp
   diskcache/diskcachefactory.cpp
   diskcache/diskcachefactory.h
   diskcache/cachingnetworkaccessmanager.cpp
@@ -26,8 +27,18 @@ set(
   diskcache/cachereply.h
 )
 
+if(UNIX)
+  set(
+    extra-sources
+    signalhandler.cpp
+    signalhandler.h
+  )
+else()
+  unset(extra-sources)
+endif()
+
 qt5_add_resources(noson-gui-resources noson.qrc)
-add_executable(noson-gui noson.cpp ${noson-gui-resources} ${diskcache_SRCS})
+add_executable(noson-gui ${noson-gui-sources} ${noson-gui-resources} ${extra-sources})
 qt5_use_modules(noson-gui Gui Qml Quick QuickControls2)
 
 if(MSVC)
