including headers in project

--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -18,23 +18,41 @@ include_directories(
 
 set(
     NosonAppbackend_SRCS
+    modules/NosonApp/tools.h
     modules/NosonApp/backend.cpp
+    modules/NosonApp/backend.h
     modules/NosonApp/sonos.cpp
+    modules/NosonApp/sonos.h
     modules/NosonApp/player.cpp
+    modules/NosonApp/player.h
     modules/NosonApp/listmodel.cpp
+    modules/NosonApp/listmodel.h
     modules/NosonApp/albumsmodel.cpp
+    modules/NosonApp/albumsmodel.h
     modules/NosonApp/artistsmodel.cpp
+    modules/NosonApp/artistsmodel.h
     modules/NosonApp/genresmodel.cpp
+    modules/NosonApp/genresmodel.h
     modules/NosonApp/tracksmodel.cpp
+    modules/NosonApp/tracksmodel.h
     modules/NosonApp/queuemodel.cpp
+    modules/NosonApp/queuemodel.h
     modules/NosonApp/radiosmodel.cpp
+    modules/NosonApp/radiosmodel.h
     modules/NosonApp/playlistsmodel.cpp
+    modules/NosonApp/playlistsmodel.h
     modules/NosonApp/zonesmodel.cpp
+    modules/NosonApp/zonesmodel.h
     modules/NosonApp/renderingmodel.cpp
+    modules/NosonApp/renderingmodel.h
     modules/NosonApp/roomsmodel.cpp
+    modules/NosonApp/roomsmodel.h
     modules/NosonApp/favoritesmodel.cpp
+    modules/NosonApp/favoritesmodel.h
     modules/NosonApp/servicesmodel.cpp
+    modules/NosonApp/servicesmodel.h
     modules/NosonApp/mediamodel.cpp
+    modules/NosonApp/mediamodel.h
 )
 
 add_library(NosonAppbackend MODULE
